// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render device list 1`] = `
.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 604px;
}

.c4 {
  box-sizing: border-box;
  padding: 32px;
}

.c6 {
  box-sizing: border-box;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 40px;
  width: 100%;
}

.c12:hover,
.c12:focus {
  background: #B29DFF;
}

.c12:active {
  background: #C5B6FF;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c11:hover,
.c11:focus {
  background: rgba(255,255,255,0.07);
}

.c11:active {
  background: rgba(255,255,255,0.13);
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c9 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c7 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c7 > thead > tr > th,
.c7 > tbody > tr > th,
.c7 > tfoot > tr > th,
.c7 > thead > tr > td,
.c7 > tbody > tr > td,
.c7 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c7 > thead > tr > th:first-child,
.c7 > tbody > tr > th:first-child,
.c7 > tfoot > tr > th:first-child,
.c7 > thead > tr > td:first-child,
.c7 > tbody > tr > td:first-child,
.c7 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c7 > thead > tr > th:last-child,
.c7 > tbody > tr > th:last-child,
.c7 > tfoot > tr > th:last-child,
.c7 > thead > tr > td:last-child,
.c7 > tbody > tr > td:last-child,
.c7 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c7 > tbody > tr > td {
  vertical-align: middle;
}

.c7 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c7 > thead > tr > th svg {
  height: 12px;
}

.c7 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c7 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c7 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c8 {
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
}

.c8 > tbody > tr td {
  vertical-align: middle;
  height: 32px;
}

.c8 > tbody {
  background: #344179;
}

.c8 > thead > tr > th {
  background: rgba(255,255,255,0.13);
}

<div
  class="c0 c1"
  width="604px"
>
  <div
    class="c2"
    color="text.main"
  >
    Device Successfully Enrolled
  </div>
  <div
    class="c3"
    color="text.slightlyMuted"
  >
    Step 3 of 4
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
      color="text.slightlyMuted"
    >
      Take a look at your enrolled devices below and remove any that you don't need anymore.
    </div>
    <div
      class="c6"
    >
      <table
        class="c7 c8"
        style="overflow: hidden; border-radius: 8px;"
      >
        <thead>
          <tr>
            <th
              style="cursor: default;"
            >
              Type
            </th>
            <th
              style="cursor: default;"
            >
              Device Name
            </th>
            <th>
              <a
                style="display: flex; align-items: center;"
              >
                Registered
                <span
                  class="c9 icon icon-chevrondown"
                  title="sort items desc"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </a>
            </th>
            <th>
              <a
                style="display: flex; align-items: center;"
              >
                Last Used
                <span
                  class="c9 icon icon-chevronsvertical"
                  title="sort items"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                    />
                    <path
                      d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                    />
                  </svg>
                </span>
              </a>
            </th>
            <th
              style="cursor: default;"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Authenticator App
            </td>
            <td
              title="iphone 12"
            >
              <div
                class="c10"
                style="max-width: 96px; white-space: nowrap;"
              >
                iphone 12
              </div>
            </td>
            <td>
              2021-08-12
            </td>
            <td>
              2021-08-12
            </td>
            <td
              align="right"
            />
          </tr>
          <tr>
            <td>
              Hardware Key
            </td>
            <td
              title="solokey"
            >
              <div
                class="c10"
                style="max-width: 96px; white-space: nowrap;"
              >
                solokey
              </div>
            </td>
            <td>
              2021-06-15
            </td>
            <td>
              2021-06-18
            </td>
            <td
              align="right"
            >
              <button
                class="c11"
                kind="border"
                title=""
              >
                Remove
              </button>
            </td>
          </tr>
          <tr>
            <td>
              Hardware Key
            </td>
            <td
              title="backup yubikey"
            >
              <div
                class="c10"
                style="max-width: 96px; white-space: nowrap;"
              >
                backup yubikey
              </div>
            </td>
            <td>
              2021-04-18
            </td>
            <td>
              2021-07-16
            </td>
            <td
              align="right"
            >
              <button
                class="c11"
                kind="border"
                title=""
              >
                Remove
              </button>
            </td>
          </tr>
          <tr>
            <td>
              Hardware Key
            </td>
            <td
              title="yubikey"
            >
              <div
                class="c10"
                style="max-width: 96px; white-space: nowrap;"
              >
                yubikey
              </div>
            </td>
            <td>
              2021-02-05
            </td>
            <td>
              2021-02-28
            </td>
            <td
              align="right"
            >
              <button
                class="c11"
                kind="border"
                title=""
              >
                Remove
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <button
      class="c12"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</div>
`;

exports[`render device removal dialog 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 32px;
  width: 400px;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #FF6257;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c10:hover,
.c10:focus {
  background: #FF8179;
}

.c10:active {
  background: #FFA19A;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:hover,
.c11:focus {
  background: rgba(255,255,255,0.13);
}

.c11:active {
  background: rgba(255,255,255,0.18);
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 8px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 40px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
  color: #FFFFFF;
}

.c5 {
  display: flex;
  flex-direction: column;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
        width="400px"
      >
        <div
          class="c6"
        >
          Remove Device
        </div>
        <div
          class="c7"
        >
          Are you sure you want to remove device
           
          <span
            class="c8"
            color="text.main"
          >
            yubikey
          </span>
           
          ?
        </div>
      </div>
      <div
        class="c9"
      >
        <button
          class="c10"
          kind="warning"
        >
          Remove
        </button>
        <button
          class="c11"
          kind="secondary"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render failed state for device list 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin: 0px;
  background: #FF6257;
  color: #000000;
}

.c7 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 604px;
}

.c4 {
  box-sizing: border-box;
  padding: 32px;
}

.c6 {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 40px;
  width: 100%;
}

.c8:hover,
.c8:focus {
  background: #B29DFF;
}

.c8:active {
  background: #C5B6FF;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-bottom: 16px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

<div
  class="c0 c1"
  width="604px"
>
  <div
    class="c2"
    color="text.main"
  >
    Device Successfully Enrolled
  </div>
  <div
    class="c3"
    color="text.slightlyMuted"
  >
    Step 3 of 4
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
      color="text.slightlyMuted"
    >
      Take a look at your enrolled devices below and remove any that you don't need anymore.
    </div>
    <div
      class="c6"
    >
      <div
        class="c7"
        kind="danger"
      >
        failed to fetch devices
      </div>
    </div>
    <button
      class="c8"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</div>
`;
